Fixed some stuff in the database.
*** Need help installing jsonpickleJS ***

Forgot server.log.

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
 
   <script>
   server_bridge = new ServerBridge();
-  server_bridge.sendToServer({"hi":1})
-  server_bridge.getFromServer({"hi":1})
+  server_bridge.sendToServer({"alice":1235})
+  server_bridge.getFromServer({"joe":68447})
 
 
   </script>
