Setting up a better less messy code environment.

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
   <script src="{{url_for('static', filename='scripts/server_bridge.js')}}"></script>
 
   <script>
-  server_bridge = new ServerBridge();
+  /*server_bridge = new ServerBridge();
   server_bridge.sendToServer({"user":["alice", "1121"]})
   server_bridge.getFromServer({"all_users":true})
-  server_bridge.getFromServer({"get_user":"alice"})
+  server_bridge.getFromServer({"get_user":"alice"})*/
   </script>
 
 </html>
