--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,16 +10,17 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script type="{{url_for('static', filename='/lib/bower_components/crypto-js/crypto-js.js.js')}}"></script>
+<script src="{{ url_for('static', filename='lib/bower_components/crypto-js/crypto-js.js') }}"></script>
 
-<script src="{{url_for('static', filename='scripts/server_bridge.js')}}"></script>
+<script src="{{ url_for('static', filename='scripts/server_bridge.js') }}"></script>
 
 <script>
+    console.log(CryptoJS.SHA256("hi").toString())
     function onLogin(){
         server_bridge = new ServerBridge();
         server_bridge.sendToServer("/sign_up",
         {"login":[document.getElementById('usr').value,
-        document.getElementById('pswd').value]})
+        CryptoJS.SHA256(document.getElementById('pswd').value).toString()]})
     }
 </script>
 </html>
