--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
  <form>
-  Username:<br>
-  <input id="usr" type="text" name="username"><br>
-  Password:<br>
-  <input id="pswd" type="text" name="password">
-  <input type="button" onclick="onLogin()" value="Login">
-</form>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<script type="{{url_for('static', filename='/lib/bower_components/crypto-js/crypto-js.js.js')}}"></script>
-
-<script src="{{url_for('static', filename='scripts/server_bridge.js')}}"></script>
-
-<script>
-    function onLogin(){
+  Username:
+  <br/>
+  <input id="usr" name="username" type="text"/>
+  <br/>
+  Password:
+  <br/>
+  <input id="pswd" name="password" type="text"/>
+  <input onclick="onLogin()" type="button" value="Login"/>
+ </form>
+ <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename=https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js) }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}">
+ </script>
+ <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename={{url_for('static', filename='/lib/bower_components/crypto-js/crypto-js.js.js')}}) }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}">
+ </script>
+ <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename={{url_for('static', filename='scripts/server_bridge.js')}}) }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}') }}">
+ </script>
+ <script>
+  function onLogin(){
         server_bridge = new ServerBridge();
         server_bridge.sendToServer("/login",
         {"login":[document.getElementById('usr').value,
         CryptoJS.SHA256(document.getElementById('pswd').value)]})
     }
-</script>
+ </script>
 </html>
