Yay! Got login and signup working!
Note:
        -Buttons in bootstrap studio auto-redirect and login/signup button
        is set to auto redirect with post methods as it posts the email and password
        as a dict.

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,14 +22,14 @@
      </i>
     </div>
     <div class="form-group">
-     <input class="form-control" id="email_login_field" name="email" placeholder="Email" type="email"/>
+     <input class="form-control" id="email_signup_field" name="email" placeholder="Email" type="email"/>
     </div>
     <div class="form-group">
-     <input class="form-control" id="password_login_field" name="password" placeholder="Password" type="password"/>
+     <input class="form-control" id="password_signup_field" name="password" placeholder="Password" type="password"/>
     </div>
     <div class="form-group">
-     <button class="btn btn-primary btn-block" id="login_button" type="submit">
-      Log In
+     <button class="btn btn-primary btn-block" id="signup_button" type="submit">
+      Sign Up
      </button>
     </div>
     <a class="forgot" href="#">
