No need to hash passwords on client.
Only hash passwords on the server or else hashing the password makes no more sense
than storing plain text.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   Current_1
+   webapp
   </title>
   <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet"/>
   <link href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}" rel="stylesheet"/>
@@ -228,17 +228,27 @@
   </script>
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/-Countdown-BS4-.js') }}">
+  <script src="{{ url_for('static', filename='js/require.js') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/-Fixed-Navbar-start-with-transparency-BS4-.js') }}">
+  <script src="{{ url_for('static', filename='js/lib/crypto-js/crypto-js.js') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Bold-BS4-Animated-Back-To-Top.js') }}">
+  <script src="{{ url_for('static', filename='js/server_function/server_bridge.js') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Profile-Edit-Form.js') }}">
+  <script src="{{ url_for('static', filename='js/server_function/init.js') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Sidebar-Menu.js') }}">
+  <script src="{{ url_for('static', filename='js/server_function/signup.js') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Smooth-Scrollto-button-read-Description.js') }}">
+  <script src="{{ url_for('static', filename='js/website_function/-Countdown-BS4-.js') }}">
+  </script>
+  <script src="{{ url_for('static', filename='js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js') }}">
+  </script>
+  <script src="{{ url_for('static', filename='js/website_function/Bold-BS4-Animated-Back-To-Top.js') }}">
+  </script>
+  <script src="{{ url_for('static', filename='js/website_function/Sidebar-Menu.js') }}">
+  </script>
+  <script src="{{ url_for('static', filename='js/website_function/Profile-Edit-Form.js') }}">
+  </script>
+  <script src="{{ url_for('static', filename='js/website_function/Smooth-Scrollto-button-read-Description.js') }}">
   </script>
  </body>
 </html>
