--- a/templates/register.html
+++ b/templates/register.html
@@ -6,33 +6,33 @@
   <title>
    Current_1
   </title>
-  <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='fonts/ionicons.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='https://fonts.googleapis.com/css?family=News+Cycle') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/-Countdown-BS4-.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/-Fixed-Navbar-start-with-transparency-BS4-.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Bold-BS4-Animated-Back-To-Top.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Features-Boxed.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Footer-Clean.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Highlight-Phone.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/navbar1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Google-Style-Login.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Profile-Edit-Form.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Profile-Edit-Form1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Sidebar-Menu.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Sidebar-Menu1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/sidebar.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Smooth-Scrollto-button-read-Description.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='fonts/font-awesome.min.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='fonts/ionicons.min.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='https://fonts.googleapis.com/css?family=News+Cycle') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/-Countdown-BS4-.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/-Fixed-Navbar-start-with-transparency-BS4-.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Bold-BS4-Animated-Back-To-Top.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Features-Boxed.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Footer-Clean.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/footer.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Highlight-Phone.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/navbar1.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Google-Style-Login.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Profile-Edit-Form.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Profile-Edit-Form1.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Sidebar-Menu.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Sidebar-Menu1.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/sidebar.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/Smooth-Scrollto-button-read-Description.css') }}') }}') }}') }}" rel="stylesheet"/>
+  <link href="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='css/styles.css') }}') }}') }}') }}" rel="stylesheet"/>
  </head>
  <body>
   <div>
    <header>
     <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:62vh 20px 55vh;padding-top:480px;">
      <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:569px;">
-      <img class="profile-img-card" src="{{ url_for('static', filename='img/avatar_2x.png') }}"/>
+      <img class="profile-img-card" src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='img/avatar_2x.png') }}') }}') }}') }}"/>
       <p class="profile-name-card">
       </p>
       <form class="form-signin">
@@ -76,7 +76,7 @@
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
      <div class="container">
       <a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">
-       <img alt="Aphel Technologies" class="img-fluid" height="97px" src="{{ url_for('static', filename='img/Aphel_icon.png') }}" style="padding-right:0px;margin-right:10px;margin-bottom:7px;" width="97px"/>
+       <img alt="Aphel Technologies" class="img-fluid" height="97px" src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='img/Aphel_icon.png') }}') }}') }}') }}" style="padding-right:0px;margin-right:10px;margin-bottom:7px;" width="97px"/>
       </a>
       <button class="navbar-toggler collapsed" data-target="#navcol-1" data-toggle="collapse">
        <span>
@@ -137,21 +137,21 @@
     Top
    </a>
   </div>
-  <script src="{{ url_for('static', filename='js/jquery.min.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='js/jquery.min.js') }}') }}') }}') }}">
   </script>
-  <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}') }}') }}') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/-Countdown-BS4-.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='js/-Countdown-BS4-.js') }}') }}') }}') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/-Fixed-Navbar-start-with-transparency-BS4-.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='js/-Fixed-Navbar-start-with-transparency-BS4-.js') }}') }}') }}') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Bold-BS4-Animated-Back-To-Top.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='js/Bold-BS4-Animated-Back-To-Top.js') }}') }}') }}') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Profile-Edit-Form.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='js/Profile-Edit-Form.js') }}') }}') }}') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Sidebar-Menu.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='js/Sidebar-Menu.js') }}') }}') }}') }}">
   </script>
-  <script src="{{ url_for('static', filename='js/Smooth-Scrollto-button-read-Description.js') }}">
+  <script src="{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='{{ url_for('static', filename='js/Smooth-Scrollto-button-read-Description.js') }}') }}') }}') }}">
   </script>
  </body>
 </html>
