--- a/aa/templates/index.html
+++ b/aa/templates/index.html
@@ -30,7 +30,7 @@
  <body>
   <div>
    <header>
-    <div class="d-flex align-items-center" style="height:100vh;background-color:#439d4c;background-image:{{ url_for('static', filename='assets/img/School.png') }};">
+    <div class="d-flex align-items-center" style="height:100vh;background-color:#439d4c;background-image:{{ url_for('static', filename='static/img/School.png') }};">
      <div class="text-center w-100 text-white">
       <h1 style="color:rgb(255,255,255);font-family:'News Cycle', sans-serif;">
        Aphel
@@ -218,7 +218,7 @@
      Alphel @ 2018
     </p>
    </footer>
-   <a class="cd-top js-cd-top cd-top--fade-out cd-top--show" href="#0" style='background-image:url("assets/img/cd-top-arrow.svg");width:40px;height:40px;'>
+   <a class="cd-top js-cd-top cd-top--fade-out cd-top--show" href="#0" style='background-image:url("static/img/cd-top-arrow.svg");width:40px;height:40px;'>
     Top
    </a>
   </div>
