--- a/aa/templates/login.html
+++ b/aa/templates/login.html
@@ -120,7 +120,7 @@
      Alphel @ 2018
     </p>
    </footer>
-   <a class="cd-top js-cd-top cd-top--fade-out cd-top--show" href="#0" style='background-image:url("assets/img/cd-top-arrow.svg");width:40px;height:40px;'>
+   <a class="cd-top js-cd-top cd-top--fade-out cd-top--show" href="#0" style='background-image:url("static/img/cd-top-arrow.svg");width:40px;height:40px;'>
     Top
    </a>
   </div>
