--- a/templates/login.html
+++ b/templates/login.html
@@ -1,154 +1,84 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   webapp
-  </title>
-  <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='fonts/ionicons.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='https://fonts.googleapis.com/css?family=News+Cycle') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/-Countdown-BS4-.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/-Fixed-Navbar-start-with-transparency-BS4-.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Bold-BS4-Animated-Back-To-Top.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Features-Boxed.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Footer-Clean.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Highlight-Phone.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/navbar1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Google-Style-Login.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Profile-Edit-Form.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Profile-Edit-Form1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Sidebar-Menu.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Sidebar-Menu1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/sidebar.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Smooth-Scrollto-button-read-Description.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
- </head>
- <body>
-  <div>
-   <header>
-    <div class="d-flex align-items-center" style="height:110vh;background-color:rgb(238,238,238);padding:10px;padding-top:165px;">
-     <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;">
-      <img class="profile-img-card" src="{{ url_for('static', filename='img/avatar_2x.png') }}"/>
-      <p class="profile-name-card">
-      </p>
-      <form class="form-signin">
-       <span class="reauth-email">
-       </span>
-       <input autofocus="" class="form-control" id="inputEmail" inputmode="email" placeholder="Email" required="" type="email"/>
-       <input class="form-control" id="inputPassword" placeholder="Password" required="" type="password"/>
-       <div class="checkbox">
-        <div class="form-check">
-         <input class="form-check-input" id="formCheck-1" type="checkbox"/>
-        </div>
-       </div>
-       <button class="btn btn-primary btn-block btn-lg btn-signin" style="background-color:#439d4c;" type="submit">
-        Sign in
-       </button>
-      </form>
-      <a class="d-block forgot-password" href="#">
-       Forgot your password?
-      </a>
-      <a class="d-block forgot-password" href="register.html">
-       Don't have an account?
-       <span style="text-decoration: underline;">
-        Create one now!
-       </span>
-      </a>
-     </div>
-     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
-      <div class="container">
-       <a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">
-        <img alt="Aphel Technologies" height="97px" src="{{ url_for('static', filename='img/Aphel_icon.png') }}" style="padding-right:0px;margin-right:10px;margin-bottom:7px;" width="97px"/>
-       </a>
-       <button class="navbar-toggler collapsed" data-target="#navcol-1" data-toggle="collapse">
-        <span>
-        </span>
-        <span>
-        </span>
-        <span>
-        </span>
-       </button>
-       <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
-        <ul class="nav navbar-nav ml-auto">
-         <li class="dropdown">
-          <a aria-expanded="false" class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" href="#" style="padding-right:20px;">
-           <i class="fa fa-info-circle" style="padding-right:7px;">
-           </i>
-           Info
-          </a>
-          <div class="dropdown-menu" role="menu">
-           <a class="dropdown-item" href="http://pchacks.ca/index.html#about" role="presentation">
-            <i class="fa fa-handshake-o" style="padding-right:5px;">
-            </i>
-            About Us
-           </a>
-           <a class="dropdown-item" href="http://pchacks.ca/index.html#contact" role="presentation">
-            <i class="fa fa-volume-control-phone" style="padding-right:5px;">
-            </i>
-            Contact
-           </a>
-          </div>
-         </li>
-        </ul>
-       </div>
-      </div>
-     </nav>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>webapp</title>
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="static/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=News+Cycle">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="static/css/-Countdown-BS4-.css">
+    <link rel="stylesheet" href="static/css/-Fixed-Navbar-start-with-transparency-BS4-.css">
+    <link rel="stylesheet" href="static/css/Bold-BS4-Animated-Back-To-Top.css">
+    <link rel="stylesheet" href="static/css/Features-Boxed.css">
+    <link rel="stylesheet" href="static/css/Footer-Clean.css">
+    <link rel="stylesheet" href="static/css/footer.css">
+    <link rel="stylesheet" href="static/css/Header-Blue.css">
+    <link rel="stylesheet" href="static/css/Highlight-Phone.css">
+    <link rel="stylesheet" href="static/css/Google-Style-Login.css">
+    <link rel="stylesheet" href="static/css/navbar1.css">
+    <link rel="stylesheet" href="static/css/Profile-Edit-Form.css">
+    <link rel="stylesheet" href="static/css/Profile-Edit-Form1.css">
+    <link rel="stylesheet" href="static/css/Sidebar-Menu.css">
+    <link rel="stylesheet" href="static/css/Sidebar-Menu1.css">
+    <link rel="stylesheet" href="static/css/sidebar.css">
+    <link rel="stylesheet" href="static/css/Smooth-Scrollto-button-read-Description.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+</head>
+
+<body>
+    <div>
+        <header>
+            <div class="d-flex align-items-center" style="height:110vh;background-color:rgb(238,238,238);padding:10px;padding-top:165px;">
+                <div id="login_form" class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;"><img src="static/img/avatar_2x.png" class="profile-img-card">
+                    <p class="profile-name-card"> </p>
+                    <form class="form-signin"><span class="reauth-email"> </span><input class="form-control" type="email" required="" placeholder="Email" autofocus="" inputmode="email" id="email"><input class="form-control" type="password" required="" placeholder="Password" id="password">
+                        <div
+                            class="checkbox">
+                            <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
+                </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;">Sign in</button></form><a class="d-block forgot-password" href="#">Forgot your password?</a><a class="d-block forgot-password"
+                    href="register.html">Don't have an account? <span style="text-decoration: underline;">Create one now!</span></a></div>
+            <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu"
+                style="color:rgb(255,255,255);background-color:#439d4c;">
+                <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
+                    <button
+                        class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navcol-1"><span></span><span></span><span></span></button>
+                        <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
+                            <ul class="nav navbar-nav ml-auto">
+                                <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#" style="padding-right:20px;"><i class="fa fa-info-circle" style="padding-right:7px;"></i>Info</a>
+                                    <div class="dropdown-menu"
+                                        role="menu"><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#about"><i class="fa fa-handshake-o" style="padding-right:5px;"></i>About Us</a><a class="dropdown-item" role="presentation" href="http://pchacks.ca/index.html#contact"><i class="fa fa-volume-control-phone" style="padding-right:5px;"></i>Contact</a></div>
+                                </li>
+                            </ul>
+                        </div>
+                </div>
+            </nav>
     </div>
-   </header>
-  </div>
-  <section class="d-block">
-  </section>
-  <div class="footer-basic" style="background-color:#439d4c;">
-   <footer>
-    <div class="social">
-     <a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);">
-      <i class="icon ion-social-instagram">
-      </i>
-     </a>
-     <a href="#" style="color:rgb(255,255,255);">
-      <i class="icon ion-social-twitter" style="color:rgb(255,255,255);">
-      </i>
-     </a>
+    </header>
     </div>
-    <ul class="list-inline">
-    </ul>
-    <p class="copyright" style="color:rgb(255,255,255);">
-     Alphel @ 2018
-    </p>
-   </footer>
-   <a class="cd-top js-cd-top cd-top--fade-out cd-top--show" href="#0" style='background-image:url("assets/img/cd-top-arrow.svg");width:40px;height:40px;'>
-    Top
-   </a>
-  </div>
-  <script src="{{ url_for('static', filename='js/jquery.min.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/require.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/lib/crypto-js/crypto-js.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/server_function/server_bridge.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/server_function/init.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/server_function/signup.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/-Countdown-BS4-.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Bold-BS4-Animated-Back-To-Top.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Sidebar-Menu.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Profile-Edit-Form.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Smooth-Scrollto-button-read-Description.js') }}">
-  </script>
- </body>
+    <section class="d-block"></section>
+    <div class="footer-basic" style="background-color:#439d4c;">
+        <footer>
+            <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
+            <ul
+                class="list-inline"></ul>
+                <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
+        </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/server_function/server_bridge.js"></script>
+    <script src="static/js/server_function/init.js"></script>
+    <script src="static/js/server_function/signup.js"></script>
+    <script src="static/js/website_function/-Countdown-BS4-.js"></script>
+    <script src="static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
+    <script src="static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
+    <script src="static/js/website_function/Sidebar-Menu.js"></script>
+    <script src="static/js/website_function/Profile-Edit-Form.js"></script>
+    <script src="static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
+    <script src="static/js/server_function/login.js"></script>
+</body>
+
 </html>
