--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,145 +1,48 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   webapp
-  </title>
-  <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='fonts/ionicons.min.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='https://fonts.googleapis.com/css?family=News+Cycle') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/-Countdown-BS4-.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/-Fixed-Navbar-start-with-transparency-BS4-.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Bold-BS4-Animated-Back-To-Top.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Features-Boxed.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Footer-Clean.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Highlight-Phone.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/navbar1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Google-Style-Login.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Profile-Edit-Form.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Profile-Edit-Form1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Sidebar-Menu.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Sidebar-Menu1.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/sidebar.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/Smooth-Scrollto-button-read-Description.css') }}" rel="stylesheet"/>
-  <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
- </head>
- <body>
-  <div>
-   <header>
-    <div class="d-flex align-items-center" style="height:100vh;background-color:rgb(238,238,238);padding:10px;padding-top:107px;">
-     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
-      <div class="container">
-       <a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">
-        <img alt="Aphel Technologies" class="img-fluid" height="97px" src="{{ url_for('static', filename='img/Aphel_icon.png') }}" style="padding-right:0px;margin-right:10px;margin-bottom:7px;" width="97px"/>
-       </a>
-       <button class="navbar-toggler collapsed" data-target="#navcol-1" data-toggle="collapse">
-        <span>
-        </span>
-        <span>
-        </span>
-        <span>
-        </span>
-       </button>
-       <div class="collapse navbar-collapse" id="navcol-1" style="font-family:'News Cycle', sans-serif;font-size:22px;">
-        <ul class="nav navbar-nav ml-auto">
-         <li class="dropdown">
-          <a aria-expanded="false" class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" href="#" style="padding-right:20px;">
-           <i class="fa fa-info-circle" style="padding-right:7px;">
-           </i>
-           Info
-          </a>
-          <div class="dropdown-menu" role="menu">
-           <a class="dropdown-item" href="http://pchacks.ca/index.html#about" role="presentation">
-            <i class="fa fa-handshake-o" style="padding-right:5px;">
-            </i>
-            About Us
-           </a>
-           <a class="dropdown-item" href="http://pchacks.ca/index.html#contact" role="presentation">
-            <i class="fa fa-volume-control-phone" style="padding-right:5px;">
-            </i>
-            Contact
-           </a>
-          </div>
-         </li>
-         <li class="dropdown">
-          <a aria-expanded="false" class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" href="#" style="padding-right:20px;">
-           <i class="fa fa-user" style="padding-right:7px;">
-           </i>
-           User
-          </a>
-          <div class="dropdown-menu" role="menu">
-           <a class="dropdown-item" href="profile.html" role="presentation">
-            <i class="fa fa-address-card" style="padding-right:5px;">
-            </i>
-            Profile
-           </a>
-           <a class="dropdown-item" href="profile.html" role="presentation">
-            <i class="fa fa-envelope-open-o" style="padding-right:5px;">
-            </i>
-            Create Announcement
-           </a>
-          </div>
-         </li>
-        </ul>
-       </div>
-      </div>
-     </nav>
-    </div>
-   </header>
-  </div>
-  <section class="d-block">
-  </section>
-  <div class="footer-basic" style="background-color:#439d4c;">
-   <footer>
-    <div class="social">
-     <a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);">
-      <i class="icon ion-social-instagram">
-      </i>
-     </a>
-     <a href="#" style="color:rgb(255,255,255);">
-      <i class="icon ion-social-twitter" style="color:rgb(255,255,255);">
-      </i>
-     </a>
-    </div>
-    <ul class="list-inline">
-    </ul>
-    <p class="copyright" style="color:rgb(255,255,255);">
-     Alphel @ 2018
-    </p>
-   </footer>
-   <a class="cd-top js-cd-top cd-top--fade-out cd-top--show" href="#0" style='background-image:url("assets/img/cd-top-arrow.svg");width:40px;height:40px;'>
-    Top
-   </a>
-  </div>
-  <script src="{{ url_for('static', filename='js/jquery.min.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/require.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/lib/crypto-js/crypto-js.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/server_function/server_bridge.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/server_function/init.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/server_function/signup.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/-Countdown-BS4-.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Bold-BS4-Animated-Back-To-Top.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Sidebar-Menu.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Profile-Edit-Form.js') }}">
-  </script>
-  <script src="{{ url_for('static', filename='js/website_function/Smooth-Scrollto-button-read-Description.js') }}">
-  </script>
- </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>webapp</title>
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="static/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=News+Cycle">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="static/css/-Countdown-BS4-.css">
+    <link rel="stylesheet" href="static/css/-Fixed-Navbar-start-with-transparency-BS4-.css">
+    <link rel="stylesheet" href="static/css/Bold-BS4-Animated-Back-To-Top.css">
+    <link rel="stylesheet" href="static/css/Features-Boxed.css">
+    <link rel="stylesheet" href="static/css/Footer-Clean.css">
+    <link rel="stylesheet" href="static/css/footer.css">
+    <link rel="stylesheet" href="static/css/Header-Blue.css">
+    <link rel="stylesheet" href="static/css/Highlight-Phone.css">
+    <link rel="stylesheet" href="static/css/Google-Style-Login.css">
+    <link rel="stylesheet" href="static/css/navbar1.css">
+    <link rel="stylesheet" href="static/css/Profile-Edit-Form.css">
+    <link rel="stylesheet" href="static/css/Profile-Edit-Form1.css">
+    <link rel="stylesheet" href="static/css/Sidebar-Menu.css">
+    <link rel="stylesheet" href="static/css/Sidebar-Menu1.css">
+    <link rel="stylesheet" href="static/css/sidebar.css">
+    <link rel="stylesheet" href="static/css/Smooth-Scrollto-button-read-Description.css">
+    <link rel="stylesheet" href="static/css/styles.css">
+</head>
+
+<body>
+    <header></header>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/server_function/server_bridge.js"></script>
+    <script src="static/js/server_function/init.js"></script>
+    <script src="static/js/server_function/signup.js"></script>
+    <script src="static/js/website_function/-Countdown-BS4-.js"></script>
+    <script src="static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
+    <script src="static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
+    <script src="static/js/website_function/Sidebar-Menu.js"></script>
+    <script src="static/js/website_function/Profile-Edit-Form.js"></script>
+    <script src="static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
+    <script src="static/js/server_function/login.js"></script>
+</body>
+
 </html>
