REAL COMMUNICATION BETWEEN SERVER AND CLIENT!
CLIENT NOW CHECKS IF USER EXISTS ACCURATELY!

NOTE:
        I ENCOUNTERED A LOT OF ERRORS IN THIS COMMIT AND WEIRD BEHAVIOUR.
        IF YOU ARE STUCK, REFER BACK TO HERE FOR POSSIBLE SOLUTIONS.

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -43,7 +43,7 @@
                         <div class="checkbox">
                             <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
                         </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;">Sign up</button></form><a class="d-block forgot-password" href="#">Forgot your password?</a><a class="d-block forgot-password"
-                        href="register.html">Already Have an Acount? Sign In</a></div>
+                        href="signup.html">Already Have an Acount? Sign In</a></div>
             </div>
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white transparency border-bottom border-light" id="transmenu" style="color:rgb(255,255,255);background-color:#439d4c;">
                 <div class="container"><a class="navbar-brand text-success" href="index.html" style="font-family:'News Cycle', sans-serif;font-size:39px;">&nbsp;<img class="img-fluid" src="static/img/Aphel_icon.png" alt="Aphel Technologies" width="97px" height="97px" style="padding-right:0px;margin-right:10px;margin-bottom:7px;"></a>
