--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="static/css/Header-Blue.css">
     <link rel="stylesheet" href="static/css/Highlight-Phone.css">
     <link rel="stylesheet" href="static/css/Google-Style-Login.css">
+    <link rel="stylesheet" href="static/css/input/input_errors.css">
+    <link rel="stylesheet" href="static/css/input/input_sucesses.css">
     <link rel="stylesheet" href="static/css/navbar1.css">
     <link rel="stylesheet" href="static/css/Profile-Edit-Form.css">
     <link rel="stylesheet" href="static/css/Profile-Edit-Form1.css">
